resources/sass/components/_navbar.scss
.navbar {

  // margin-top: -$navbar-height;
  background-color: $blue;
  color: white;
  text-transform: lowercase;
  position: relative;
  // position: fixed;
  z-index: 999;
  left: 0;
  right: 0;
  top: 0;

  a:not(.button) {
    color: white;
    opacity: .9;
    text-decoration: none;
    transition: opacity $base-duration $base-timing;
    &:hover {
      opacity: 1;
    }
  }

  .dropdown-menu {
    background-color: white;
    a {
      color: $blue;
    }
  }

  &__home {
    background-color: transparent;
    color: $blue
  }
  &__auth-login, &__auth-register {
    @media screen and (min-width: $large-screen) {
      background-color: transparent;
      color: $blue;
    }
  }
  &__home {
    a:not(.button) {
      color: $blue
    }
    svg path {
      fill: $blue;
    }
  }

  .container {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-bottom: 0;
  }

  &__primary {
    height: $navbar-height;
    line-height: $navbar-height;
  }

  &__secondary {
    background-color: $green;
    height: 2 * $base-spacing;
    line-height: 2 * $base-spacing;
  }
}

.navbar--brand {
  font-family: $heading-font-family;
  font-size: modular-scale(1);
  opacity: 1 !important;
  margin-right: 3 * $base-spacing;
  font-weight: 400;
  height: $base-spacing;
  line-height: $base-spacing;
  svg {
    vertical-align: middle;
    display: inline-block;
    // margin: .1 * $base-spacing;
    width: .8 * $base-spacing;
    height: .8 * $base-spacing;
  }
}

.navbar--nav {
  display: none;
  @media screen and (min-width: $large-screen) {
    display: flex;
  }

  flex-direction: row;

  &__right {
    margin-left: auto;
    padding-left: $base-spacing;
  }
}

.nav-item + .nav-item {
  margin-left: $small-spacing;
}
.nav-link {
  padding-left: $small-spacing;
  padding-right: $small-spacing;
}

.navbar--toggler {
  display: none;
}

.dropdown-menu {
  display: none;
}

.dropdown:hover .dropdown-menu {
  display: block;
}

.dropdown-menu{
  line-height: $navbar-height;
}

.dropdown-item {
  padding: 0 $base-spacing;
  text-align: right;
}

